[package]
name = "twif"
version = "0.1.0"
authors = ["Benjamin Herr <ben@0x539.de>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
structopt = { version = "0.2", features = ["paw"] }
paw = "1.0"
eyre = "0.1"
#anyhow = "1.0"
url = "2.1.0"
tracing = "0.1.8"
tracing-subscriber = "0.2"
tracing-error = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
spandoc = "0.1"
hls_m3u8 = "0.2"
hyper = "0.13"
tokio = { version = "0.2.11", features = ["process", "macros"] }
